--- a/ec/app/templates/app/base.html
+++ b/ec/app/templates/app/base.html
@@ -9,20 +9,22 @@
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="{% static 'app/css/owl.carousel.min.css' %}">
     <link rel="stylesheet" href="{% static 'app/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
+     
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
     <title>Dairy Products | {% block title %}{% endblock title %}</title>
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="{% static 'app/images/neel.png' %}" width="60", height = "50"></a>
+          <a class="navbar-brand" href="#"><img src="{% static 'app/images/logo.png' %}" width="60", height = "50"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -58,27 +60,29 @@
               </li>  
             </ul>
 
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+            <form class="d-flex" role="search" action="/search">
+              <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
+              <button class="btn btn-outline-dark" type="submit">Search</button>
             </form>
           </div>
 
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown mx-2">
-                <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Gourav</a>
+                <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{request.user}}</a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                     <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
-                    <li><a class="dropdown-item" href="#">orders</a></li>
+                    <li><a class="dropdown-item" href="{% url 'orders' %}">orders</a></li>
                     <li><a class="dropdown-item" href="{% url 'passwordchange' %}">Change Password</a></li>
                     <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
             </li>
             <li class="nav-item mx-2">
-                <a href="{% url 'showcart' %}" class="nav-link text-white">Cart 5</a>
+                <!-- <a href="{% url 'showcart' %}" class="nav-link text-white"><span class="badge bg-danger">{% if totalitem > 0 %} {{totalitem}} {% endif %} </span> Cart</a> -->
+                <a href="{% url 'showcart' %}" class="nav-link text-white">{% if totalitem > 0 %} <span class="badge bg-danger"> {{totalitem}} </span>{% endif %} <i class="fa fa-shopping-cart"></i></a>
             </li>
             <li class="nav-item mx-2">
-                <a href="#" class="nav-link text-white">Wishlist 5</a>
+                <!-- <a href="#" class="nav-link text-white"><span class="badge bg-danger">{% if wishitem > 0 %} {{wishitem}} {% endif %} </span> <i class="fa fa-heart"></i></a> -->
+                <a href="{% url 'showwishlist' %}" class="nav-link text-white">{% if wishitem > 0 %} <span class="badge bg-danger"> {{wishitem}} </span>  {% endif %} <i class="fa fa-heart"></i></a>
             </li>
             {% else %}
             <li class="nav-item mx-2">
