--- a/ec/app/templates/app/checkout.html
+++ b/ec/app/templates/app/checkout.html
@@ -44,7 +44,7 @@
                         <input class="form-check-input" type="radio" name="custid" id="custadd{{forloop.counter}}" value="{{ad.id}}">
                         <label class="form-check-label fw-bold" for="custadd{{forloop.counter}}">Address: {{forloop.counter}}</label>
                     </div>
-                {% endfor %}
+                    {% endfor %}
                 <div class="form-check mb-3">
                     <label for="totalamount" class="form-label">Total Amount</label>
                     <input type="number" class="form-control" name="totalamount" value={{totalamount}} readonly>
@@ -70,13 +70,12 @@
         "order_id": "{{order_id}}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
         "handler": function (response){
             console.log("success")
-                var form = document.getElementById("myform")
-                //alert(form.elements["custid"].value);
-                //alert(response.razorpay_payment_id);
-                //alert(response.razorpay_order_id);
-                //alert(response.razorpay_signature)
-                window.location.href = 'http://127.0.0.1:8000/paymentdone?order_id=${response.razorpay_order_id}&payment_id=${response.razorpay_payment_id}&cust_id=${form.elements["custid"].value}'
 
+
+            var form = document.getElementById("myform");
+            window.location.href = `http://localhost:8000/paymentdone?order_id=${response.razorpay_order_id}&payment_id=${response.razorpay_payment_id}&cust_id=${form.elements["custid"].value}`
+              //window.location.href = `http://localhost:8000/paymentdone?order_id=${response.razorpay_order_id}&payment_id=${response.razorpay_payment_id}&cust_id=${form.elements["custid"].value}`
+        
         },
           
         "theme": {
